--- a/src/index.html
+++ b/src/index.html
@@ -22,13 +22,15 @@
   <!-- Meta tags for character set and viewport -->
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>shrecknet lite</title>
+  <title>ShreckNet Lite - VtM Character Sheet</title>
 
   <!-- Stylesheets -->
   <link rel="stylesheet" href="/src/css/style.css">
   <link rel="stylesheet" <link href="/dist/style.css">
 </head>
-<body class="bg-blue-500 text-white">
+
+<body class="bg-background text-white">
+  
   <h1 class="text-4xl font-bold">Hello, Tailwind!</h1>
 
   <!-- Javascript -->
