--- a/src/index.html
+++ b/src/index.html
@@ -29,9 +29,9 @@
   <link rel="stylesheet" <link href="/dist/style.css">
 </head>
 
-<body class="bg-background text-white">
+<body class="bg-background flex justify-center items-center py-[10rem]">
   
-  <h1 class="text-4xl font-bold">Hello, Tailwind!</h1>
+  <h1 class="font-heading text-textPrimary text-headingXL">Hello, Tailwind!</h1>
 
   <!-- Javascript -->
   <script src="script.js"></script>
