--- a/src/index.html
+++ b/src/index.html
@@ -36,20 +36,20 @@
   <div class="w-full max-w-4xl px-8 flex flex-col items-center space-y-16">
 
     <!-- Hero / Title + Description -->
-    <div class="text-center space-y-4">
-      <h1 class="font-gloock text-headingXL">shrecknet-lite</h1>
-      <p class="text-body">
-        welcome to / --------------------- \ by 
-        <a href="https://github.com/frantan" class="text-accent underline">frantan</a>
+    <div class="text-center space-y-1">
+      <h1 class="font-heading text-headingXL ">shrecknet-lite</h1>
+      <p class="font-body text-textSecondary text-body ml-1">
+        welcome to / ---------------------- \ by 
+        <a href="https://github.com/frantan" class="text-accent py-1 px-2 rounded-round hover:text-textPrimary hover:bg-accent transition duration-300">frantan</a>
       </p>
     </div>
 
     <!-- Buttons -->
-    <div class="flex space-x-6">
-      <a href="v20.html" class="px-6 py-3 bg-accent text-textPrimary rounded-lg hover:bg-red-800 transition">
+    <div class="flex flex-col text-center font-body text-textPrimary space-y-1">
+      <a href="v20.html" class="bg-foreground px-6 py-3 rounded-round hover:bg-red-800 transition">
         V20 Sheet
       </a>
-      <a href="v5.html" class="px-6 py-3 bg-accent text-textPrimary rounded-lg hover:bg-red-800 transition">
+      <a href="v5.html" class="bg-foreground px-6 py-3 rounded-round hover:bg-red-800 transition">
         V5 Sheet
       </a>
     </div>
