--- a/src/index.html
+++ b/src/index.html
@@ -29,28 +29,28 @@
   <link rel="stylesheet" <link href="/dist/style.css">
 </head>
 
-<body class="bg-background min-h-screen flex justify-center items-center font-geist text-textPrimary">
+<body class="bg-background min-h-screen flex justify-center py-72 font-geist text-textPrimary">
 
   
   <!-- Main container -->
-  <div class="w-full max-w-4xl px-8 flex flex-col items-center space-y-16">
+  <div class="w-full max-w-4xl px-8 flex flex-col items-center space-y-28">
 
     <!-- Hero / Title + Description -->
     <div class="text-center space-y-1">
       <h1 class="font-heading text-headingXL ">shrecknet-lite</h1>
       <p class="font-body text-textSecondary text-body ml-1">
         welcome to / ---------------------- \ by 
-        <a href="https://github.com/frantan" class="text-accent py-1 px-2 rounded-round hover:text-textPrimary hover:bg-accent transition duration-300">frantan</a>
+        <a href="https://github.com/frantan" class="text-accent py-1 px-3 rounded-round hover:text-textPrimary hover:bg-accent transition duration-300">frantan</a>
       </p>
     </div>
 
     <!-- Buttons -->
-    <div class="flex flex-col text-center font-body text-textPrimary space-y-1">
-      <a href="v20.html" class="bg-foreground px-6 py-3 rounded-round hover:bg-red-800 transition">
-        V20 Sheet
+    <div class="flex flex-col text-center font-body text-body text-textPrimary space-y-5">
+      <a href="v20.html" class="group bg-foreground px-12 py-4 rounded-round hover:bg-accent transition">
+        create a <span class="text-accent group-hover:text-textPrimary transition">V20</span> character sheet
       </a>
-      <a href="v5.html" class="bg-foreground px-6 py-3 rounded-round hover:bg-red-800 transition">
-        V5 Sheet
+      <a href="v5.html" class="group bg-foreground px-12 py-4 rounded-round hover:bg-accent hover:text-textPrimary transition">
+        create a <span class="text-accent group-hover:text-textPrimary transition">V5</span> character sheet
       </a>
     </div>
 
