+ homepage link to github

--- a/src/index.html
+++ b/src/index.html
@@ -40,7 +40,7 @@
       <h1 class="font-heading text-headingXL ">shrecknet-lite</h1>
       <p class="font-body text-textSecondary text-body ml-1">
         welcome to / ---------------------- \ by 
-        <a href="#" class="text-accent py-1 px-3 rounded-round hover:text-textPrimary hover:bg-accent transition duration-300">frantan</a>
+        <a href="https://github.com/overuseofrem/schrecknet-lite" class="text-accent py-1 px-3 rounded-round hover:text-textPrimary hover:bg-accent transition duration-300">frantan</a>
       </p>
     </div>
   
