--- a/src/index.html
+++ b/src/index.html
@@ -29,34 +29,44 @@
   <link rel="stylesheet" <link href="/dist/style.css">
 </head>
 
-<body class="bg-background min-h-screen flex justify-center font-geist text-textPrimary">
+<body class="bg-background min-h-screen flex justify-center items-center font-body text-textPrimary">
+
   
   <!-- Main container -->
-  <div class="">
+  <div class="w-full flex flex-col items-center gap-7">
 
     <!-- Hero / Title + Description -->
-    <div class="">
-      <h1 class="">shrecknet-lite</h1>
-      <p class="">
-        welcome to / ---------------------- \ by 
-        <a href="https://github.com/overuseofrem/schrecknet-lite" class="text-accent rounded-round hover:text-textPrimary hover:bg-accent transition duration-300">frantan</a>
+    <div class="text-center space-y-1">
+      <h1 class="font-heading text-5xl">shrecknet-lite</h1>
+
+      <!-- Mobile Only -->
+      <p class=" text-textSecondary text-lg">
+        by
+        <a href="https://github.com/overuseofrem/schrecknet-lite" class="text-accent py-1 px-3 rounded-round hover:text-textPrimary hover:bg-accent transition duration-300">frantan</a>
       </p>
+
+      <!-- Desktop Only -->
+      <p class=" text-textSecondary text-body hidden">
+        welcome to / ---------------------- \ by 
+        <a href="https://github.com/overuseofrem/schrecknet-lite" class="text-accent py-1 px-3 rounded-round hover:text-textPrimary hover:bg-accent transition duration-300">frantan</a>
+      </p>
+
     </div>
   
     <!-- Button container -->
-    <div class="">
+    <div class="w-max flex flex-col justify-center items-center space-y-3">
       <!-- Buttons -->
-      <div class="">
-        <a href="v20.html" class="group bg-foreground rounded-round hover:bg-accent transition">
+      <div class="flex flex-col text-center font-body text-textPrimary space-y-2">
+        <a href="v20.html" class="group bg-foreground px-5 py-2 rounded-round hover:bg-accent transition">
           create a <span class="text-accent group-hover:text-textPrimary transition">V20</span> character sheet
         </a>
-        <a href="v5.html" class="group bg-foreground rounded-round hover:bg-accent hover:text-textPrimary transition">
+        <a href="v5.html" class="group bg-foreground px-5 py-2 rounded-round hover:bg-accent hover:text-textPrimary transition">
           create a <span class="text-accent group-hover:text-textPrimary transition">V5</span> character sheet
         </a>
       </div>
-      <p class="">version 0.1.0</p>
-  </div>
-
+      <p class="text-textSecondary font-body text-xs">version 0.1.0</p>
+    </div>
+    
   </div>
 
   <!-- Javascript -->
