--- a/src/index.html
+++ b/src/index.html
@@ -18,6 +18,7 @@
 
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <!-- Meta tags for character set and viewport -->
   <meta charset="UTF-8">
@@ -31,7 +32,7 @@
 
 <body class="bg-background min-h-screen flex justify-center items-center font-body text-textPrimary">
 
-  
+
   <!-- Main container -->
   <div class="w-full flex flex-col items-center gap-7 sm:gap-14 lg:gap-28">
 
@@ -42,23 +43,26 @@
       <!-- Mobile Only -->
       <p class=" text-textSecondary text-lg sm:hidden">
         by
-        <a href="https://github.com/overuseofrem/schrecknet-lite" class="text-accent py-1 px-3 rounded-round hover:text-textPrimary hover:bg-accent transition duration-300">frantan</a>
+        <a href="https://github.com/overuseofrem/schrecknet-lite"
+          class="text-accent py-1 px-3 rounded-round hover:text-textPrimary hover:bg-accent transition duration-300">frantan</a>
       </p>
-      
+
       <!--  Tablets Only -->
       <p class=" text-textSecondary text-base ml-2 hidden sm:block lg:hidden">
-        welcome to / ------------------- \ by 
-        <a href="https://github.com/overuseofrem/schrecknet-lite" class="text-accent py-1 px-3 rounded-round hover:text-textPrimary hover:bg-accent transition duration-300">frantan</a>
+        welcome to / ------------------- \ by
+        <a href="https://github.com/overuseofrem/schrecknet-lite"
+          class="text-accent py-1 px-3 rounded-round hover:text-textPrimary hover:bg-accent transition duration-300">frantan</a>
       </p>
 
       <!-- Desktop Only -->
       <p class=" text-textSecondary text-xl ml-2 hidden lg:block">
-        welcome to / ---------------------- \ by 
-        <a href="https://github.com/overuseofrem/schrecknet-lite" class="text-accent py-1 px-3 rounded-round hover:text-textPrimary hover:bg-accent transition duration-300">frantan</a>
+        welcome to / ---------------------- \ by
+        <a href="https://github.com/overuseofrem/schrecknet-lite"
+          class="text-accent py-1 px-3 rounded-round hover:text-textPrimary hover:bg-accent transition duration-300">frantan</a>
       </p>
 
     </div>
-  
+
     <!-- Button container -->
     <div class="w-max flex flex-col justify-center items-center gap-3 sm:gap-5">
       <!-- Buttons -->
@@ -66,17 +70,19 @@
         <a href="v20.html" class="group bg-foreground px-5 py-2 rounded-round hover:bg-accent transition">
           create a <span class="text-accent group-hover:text-textPrimary transition">V20</span> character sheet
         </a>
-        <a href="v5.html" class="group bg-foreground px-5 py-2 rounded-round hover:bg-accent hover:text-textPrimary transition">
+        <a href="v5.html"
+          class="group bg-foreground px-5 py-2 rounded-round hover:bg-accent hover:text-textPrimary transition">
           create a <span class="text-accent group-hover:text-textPrimary transition">V5</span> character sheet
         </a>
       </div>
-      <p class="text-textSecondary font-body text-xs sm:text-sm">version 0.1.0</p>
+      <p class="text-textSecondary font-body text-xs">version 0.1.0</p>
     </div>
-    
+
   </div>
 
   <!-- Javascript -->
   <script src="script.js"></script>
 
 </body>
+
 </html>
