--- a/src/index.html
+++ b/src/index.html
@@ -64,14 +64,13 @@
     </div>
 
     <!-- Button container -->
-    <div class="w-max flex flex-col justify-center items-center gap-3 sm:gap-5">
+    <div class="w-max flex flex-col justify-center items-center gap-5">
       <!-- Buttons -->
       <div class="flex flex-col text-center font-body text-textPrimary space-y-2 lg:text-lg">
-        <a href="v20.html" class="group bg-foreground px-5 py-2 rounded-round hover:bg-accent transition">
+        <a href="v20.html" class="group bg-foreground px-5 py-2 rounded-round hover:bg-accent transition transform hover:scale-[1.02]">
           create a <span class="text-accent group-hover:text-textPrimary transition">V20</span> character sheet
         </a>
-        <a href="v5.html"
-          class="group bg-foreground px-5 py-2 rounded-round hover:bg-accent hover:text-textPrimary transition">
+        <a href="v5.html" class="group bg-foreground px-5 py-2 rounded-round hover:bg-accent transition transform hover:scale-[1.02]">
           create a <span class="text-accent group-hover:text-textPrimary transition">V5</span> character sheet
         </a>
       </div>
