Add HTML structure for V20 Header
This commits includes the HTML for the header, which I completley forgot lol.

--- a/src/v20.html
+++ b/src/v20.html
@@ -40,6 +40,19 @@
 
 <body class="bg-background min-h-screen flex justify-center items-center font-body text-textPrimary">
 
+  <!-- Header -->
+   <header class="">
+
+    <div class="">
+      <h4 class="">schrecknet-lite</h4>
+      <p class="">/ <span class="">v20</span>character sheet</p>
+    </div>
+    <p class="">\ by 
+      <a href="" class="">frantan</a>
+    </p>
+
+   </header>
+
   <!-- Main container -->
   <div class="">
 
