Change index.html 'frantan' link hover
This commit modifies the 'frantan' link in index.html to show underline on hover.
The pill/button hover is removed.
Sizing for the description was also tweaked to accomodate this change.

--- a/src/index.html
+++ b/src/index.html
@@ -44,21 +44,21 @@
       <p class=" text-textSecondary text-lg sm:hidden">
         by
         <a href="https://github.com/overuseofrem/schrecknet-lite"
-          class="text-accent py-1 px-3 rounded-round hover:text-textPrimary hover:bg-accent transition duration-300">frantan</a>
+          class="text-accent hover:underline hover:underline-offset-4">frantan</a>
       </p>
 
       <!--  Tablets Only -->
-      <p class=" text-textSecondary text-base ml-2 hidden sm:block lg:hidden">
-        welcome to / ------------------- \ by
+      <p class=" text-textSecondary text-base hidden sm:block lg:hidden">
+        welcome to / --------------------- \ by
         <a href="https://github.com/overuseofrem/schrecknet-lite"
-          class="text-accent py-1 px-3 rounded-round hover:text-textPrimary hover:bg-accent transition duration-300">frantan</a>
+          class="text-accent hover:underline hover:underline-offset-4">frantan</a>
       </p>
 
       <!-- Desktop Only -->
-      <p class=" text-textSecondary text-xl ml-2 hidden lg:block">
-        welcome to / ---------------------- \ by
+      <p class=" text-textSecondary text-xl hidden lg:block">
+        welcome to / ------------------------ \ by
         <a href="https://github.com/overuseofrem/schrecknet-lite"
-          class="text-accent py-1 px-3 rounded-round hover:text-textPrimary hover:bg-accent transition duration-300">frantan</a>
+          class="text-accent hover:underline hover:underline-offset-4">frantan</a>
       </p>
 
     </div>
