Fix stylesheet link issue
This commit includes fixing the second stylesheet link issue in both index.html and v20.html

--- a/src/v20.html
+++ b/src/v20.html
@@ -35,7 +35,7 @@
 
   <!-- Stylesheets -->
   <link rel="stylesheet" href="/src/css/style.css">
-  <link rel="stylesheet" <link href="/dist/style.css">
+  <link rel="stylesheet" href="/dist/style.css">
 </head>
 
 <body class="overflow-x-hidden bg-background min-h-screen flex flex-col justify-center items-center font-body text-textPrimary">
