--- a/src/index.html
+++ b/src/index.html
@@ -27,7 +27,7 @@
 
   <!-- Stylesheets -->
   <link rel="stylesheet" href="/src/css/style.css">
-  <link rel="stylesheet" <link href="/dist/style.css">
+  <link rel="stylesheet" href="/dist/style.css">
 </head>
 
 <body class="bg-background min-h-screen flex justify-center items-center font-body text-textPrimary">
