Start with 'Basics' section dropdown
This commit includes the bare for nature/demeanro dropdowns.
I will be migrating it to a json file.
Also, [REMEMBER: make shared classes for forms]

--- a/src/index.html
+++ b/src/index.html
@@ -63,7 +63,7 @@
     </div>
 
     <!-- Button container -->
-    <div class="w-max flex flex-col justify-center items-center gap-5">
+    <div class="text-base w-max flex flex-col justify-center items-center gap-5">
       <!-- Buttons -->
       <div class="flex flex-col text-center font-body text-textPrimary space-y-2 lg:text-lg">
         <a href="v20.html" class="group bg-foreground px-5 py-2 rounded-round hover:bg-accent transition transform hover:scale-[1.02]">
