Link [nature_demeanor.json] to dropdowns
This commit includes a js script to fetch the [nature_demeanor.json] and insert it into <select> elements with the 'name' attribute of 'nature' and 'demeanor'.

--- a/src/v20.html
+++ b/src/v20.html
@@ -67,31 +67,39 @@
         <h2 class="font-heading text-4xl mb-7">Basics</h2>
         <div class="flex flex-col gap-3">
 
-          <!-- row 1 -->
+          <!-- Player -->
           <label class="flex flex-col text-xs text-start text-textSecondary">player
             <input type="text" name="playerName" placeholder="player" class="bg-foreground text-base text-textPrimary placeholder-textSecondary mt-1 py-3 px-4 rounded-round transition border border-transparent hover:scale-[1.02] focus:border-accent focus:outline-none focus:ring-0 focus:scale-[1.02]">
           </label>
+
+          <!-- Name -->
           <label class="flex flex-col text-xs text-start text-textSecondary">name
             <input type="text" name="characterName" placeholder="name" class="bg-foreground text-base text-textPrimary placeholder-textSecondary mt-1 py-3 px-4 rounded-round transition border border-transparent hover:scale-[1.02] focus:border-accent focus:outline-none focus:ring-0 focus:scale-[1.02]">
           </label>
+
+          <!-- Chronicle -->
           <label class="flex flex-col text-xs text-start text-textSecondary">chronicle
             <input type="text" name="chronicle" placeholder="chronicle" class="bg-foreground text-base text-textPrimary placeholder-textSecondary mt-1 py-3 px-4 rounded-round transition border border-transparent hover:scale-[1.02] focus:border-accent focus:outline-none focus:ring-0 focus:scale-[1.02]">
           </label>
 
-          <!-- row 2 -->
+          <!-- Concept -->
           <label class="flex flex-col text-xs text-start text-textSecondary">concept
             <input type="text" name="concept" placeholder="concept" class="bg-foreground text-base text-textPrimary placeholder-textSecondary mt-1 py-3 px-4 rounded-round transition border border-transparent hover:scale-[1.02] focus:border-accent focus:outline-none focus:ring-0 focus:scale-[1.02]">
           </label>
+
+          <!-- Nature -->
           <label class="flex flex-col text-xs text-start text-textSecondary">nature
             <select name="nature" class="bg-foreground text-base text-textPrimary placeholder-textSecondary py-[0.95rem] px-4 rounded-round transition border border-transparent hover:scale-[1.02] focus:border-accent focus:outline-none focus:ring-0 focus:scale-[1.02]">
               <option value="" disabled selected hidden>nature</option>
-              
+              <!-- Options will be added here by JavaScript -->
             </select>
           </label>
+
+          <!-- Demeanor -->
           <label class="flex flex-col text-xs text-start text-textSecondary">demeanor
             <select name="demeanor" class="bg-foreground text-base text-textPrimary placeholder-textSecondary py-[0.95rem] px-4 rounded-round transition border border-transparent hover:scale-[1.02] focus:border-accent focus:outline-none focus:ring-0 focus:scale-[1.02]">
               <option value="" disabled selected hidden>demeanor</option>
-              
+                <!-- Options will be added here by JavaScript -->
             </select>
           </label>
 
@@ -234,7 +242,7 @@
 
   
   <!-- Javascript -->
-  <script src="src/js/script.js"></script>
+  <script src="js/script.js"></script>
 
 </body>
 
