Fix styling for dropdown
This commit includes fixes to the dropdown styling via dynamic styling.
So now, 'placeholder' text prior to selection will be 'textSeconary' and become 'textPrimary' when an option is selected.
Also includes an addition to the Nature/Demeanor datalink to keep the placeholders.

--- a/src/v20.html
+++ b/src/v20.html
@@ -89,7 +89,7 @@
 
           <!-- Nature -->
           <label class="flex flex-col text-xs text-start text-textSecondary">nature
-            <select name="nature" class="bg-foreground text-base text-textPrimary placeholder-textSecondary py-[0.95rem] px-4 rounded-round transition border border-transparent hover:scale-[1.02] focus:border-accent focus:outline-none focus:ring-0 focus:scale-[1.02]">
+            <select name="nature" class="bg-foreground text-base text-textPrimary py-[0.95rem] px-4 rounded-round transition border border-transparent hover:scale-[1.02] focus:border-accent focus:outline-none focus:ring-0 focus:scale-[1.02]">
               <option value="" disabled selected hidden>nature</option>
               <!-- Options will be added here by JavaScript -->
             </select>
@@ -97,9 +97,8 @@
 
           <!-- Demeanor -->
           <label class="flex flex-col text-xs text-start text-textSecondary">demeanor
-            <select name="demeanor" class="bg-foreground text-base text-textPrimary placeholder-textSecondary py-[0.95rem] px-4 rounded-round transition border border-transparent hover:scale-[1.02] focus:border-accent focus:outline-none focus:ring-0 focus:scale-[1.02]">
+            <select name="demeanor" class="bg-foreground text-base text-textPrimary py-[0.95rem] px-4 rounded-round transition border border-transparent hover:scale-[1.02] focus:border-accent focus:outline-none focus:ring-0 focus:scale-[1.02]">
               <option value="" disabled selected hidden>demeanor</option>
-                <!-- Options will be added here by JavaScript -->
             </select>
           </label>
 
@@ -118,7 +117,7 @@
 
         -->
         <label class="flex flex-col text-xs text-start text-textSecondary">sire
-          <input type="text" name="sire" placeholder="player" class="bg-foreground text-base text-textPrimary placeholder-textSecondary mt-1 py-3 px-4 rounded-round transition border border-transparent hover:scale-[1.02] focus:border-accent focus:outline-none focus:ring-0 focus:scale-[1.02]">
+          <input type="text" name="sire" placeholder="sire" class="bg-foreground text-base text-textPrimary placeholder-textSecondary mt-1 py-3 px-4 rounded-round transition border border-transparent hover:scale-[1.02] focus:border-accent focus:outline-none focus:ring-0 focus:scale-[1.02]">
         </label>
         <label class="flex flex-col text-xs text-start text-textSecondary">clan
           <select name="clan" class="bg-foreground text-base text-textPrimary placeholder-textSecondary py-[0.95rem] px-4 rounded-round transition border border-transparent hover:scale-[1.02] focus:border-accent focus:outline-none focus:ring-0 focus:scale-[1.02]">
