Fix incorrect styling for <input> placeholder
This commit includes changing 'placeholder-textSecondary' to 'placeholder:text-textSecondary'.

--- a/src/v20.html
+++ b/src/v20.html
@@ -69,22 +69,22 @@
 
           <!-- Player -->
           <label class="flex flex-col text-xs text-start text-textSecondary">player
-            <input type="text" name="playerName" placeholder="player" class="bg-foreground text-base text-textPrimary placeholder-textSecondary mt-1 py-3 px-4 rounded-round transition border border-transparent hover:scale-[1.02] focus:border-accent focus:outline-none focus:ring-0 focus:scale-[1.02]">
+            <input type="text" name="playerName" placeholder="player" class="bg-foreground text-base text-textPrimary placeholder:text-textSecondary mt-1 py-3 px-4 rounded-round transition border border-transparent hover:scale-[1.02] focus:border-accent focus:outline-none focus:ring-0 focus:scale-[1.02]">
           </label>
 
           <!-- Name -->
           <label class="flex flex-col text-xs text-start text-textSecondary">name
-            <input type="text" name="characterName" placeholder="name" class="bg-foreground text-base text-textPrimary placeholder-textSecondary mt-1 py-3 px-4 rounded-round transition border border-transparent hover:scale-[1.02] focus:border-accent focus:outline-none focus:ring-0 focus:scale-[1.02]">
+            <input type="text" name="characterName" placeholder="name" class="bg-foreground text-base text-textPrimary placeholder:text-textSecondary mt-1 py-3 px-4 rounded-round transition border border-transparent hover:scale-[1.02] focus:border-accent focus:outline-none focus:ring-0 focus:scale-[1.02]">
           </label>
 
           <!-- Chronicle -->
           <label class="flex flex-col text-xs text-start text-textSecondary">chronicle
-            <input type="text" name="chronicle" placeholder="chronicle" class="bg-foreground text-base text-textPrimary placeholder-textSecondary mt-1 py-3 px-4 rounded-round transition border border-transparent hover:scale-[1.02] focus:border-accent focus:outline-none focus:ring-0 focus:scale-[1.02]">
+            <input type="text" name="chronicle" placeholder="chronicle" class="bg-foreground text-base text-textPrimary placeholder:text-textSecondary mt-1 py-3 px-4 rounded-round transition border border-transparent hover:scale-[1.02] focus:border-accent focus:outline-none focus:ring-0 focus:scale-[1.02]">
           </label>
 
           <!-- Concept -->
           <label class="flex flex-col text-xs text-start text-textSecondary">concept
-            <input type="text" name="concept" placeholder="concept" class="bg-foreground text-base text-textPrimary placeholder-textSecondary mt-1 py-3 px-4 rounded-round transition border border-transparent hover:scale-[1.02] focus:border-accent focus:outline-none focus:ring-0 focus:scale-[1.02]">
+            <input type="text" name="concept" placeholder="concept" class="bg-foreground text-base text-textPrimary placeholder:text-textSecondary mt-1 py-3 px-4 rounded-round transition border border-transparent hover:scale-[1.02] focus:border-accent focus:outline-none focus:ring-0 focus:scale-[1.02]">
           </label>
 
           <!-- Nature -->
@@ -117,7 +117,7 @@
 
         -->
         <label class="flex flex-col text-xs text-start text-textSecondary">sire
-          <input type="text" name="sire" placeholder="sire" class="bg-foreground text-base text-textPrimary placeholder-textSecondary mt-1 py-3 px-4 rounded-round transition border border-transparent hover:scale-[1.02] focus:border-accent focus:outline-none focus:ring-0 focus:scale-[1.02]">
+          <input type="text" name="sire" placeholder="sire" class="bg-foreground text-base text-textPrimary placeholder:text-textSecondary mt-1 py-3 px-4 rounded-round transition border border-transparent hover:scale-[1.02] focus:border-accent focus:outline-none focus:ring-0 focus:scale-[1.02]">
         </label>
         <label class="flex flex-col text-xs text-start text-textSecondary">clan
           <select name="clan" class="bg-foreground text-base text-textPrimary placeholder-textSecondary py-[0.95rem] px-4 rounded-round transition border border-transparent hover:scale-[1.02] focus:border-accent focus:outline-none focus:ring-0 focus:scale-[1.02]">
