--- a/src/v20.html
+++ b/src/v20.html
@@ -119,16 +119,31 @@
         <label class="flex flex-col text-xs text-start text-textSecondary">sire
           <input type="text" name="sire" placeholder="sire" class="bg-foreground text-base text-textPrimary placeholder:text-textSecondary mt-1 py-3 px-4 rounded-round transition border border-transparent hover:scale-[1.02] focus:border-accent focus:outline-none focus:ring-0 focus:scale-[1.02]">
         </label>
+
+        <!-- Clans/Bloodlines -->
         <label class="flex flex-col text-xs text-start text-textSecondary">clan
-          <select name="clan" class="bg-foreground text-base text-textPrimary placeholder-textSecondary py-[0.95rem] px-4 rounded-round transition border border-transparent hover:scale-[1.02] focus:border-accent focus:outline-none focus:ring-0 focus:scale-[1.02]">
+          <select name="clan" class="bg-foreground text-base text-textPrimary py-[0.95rem] px-4 rounded-round transition border border-transparent hover:scale-[1.02] focus:border-accent focus:outline-none focus:ring-0 focus:scale-[1.02]">
             <option value="" disabled selected hidden>clan</option>
-            
+            <!-- Clans and Bloodlines will be added here by the new script -->
           </select>
         </label>
+
+        <!-- Generation -->
         <label class="flex flex-col text-xs text-start text-textSecondary">generation
           <select name="generation" class="bg-foreground text-base text-textPrimary placeholder-textSecondary py-[0.95rem] px-4 rounded-round transition border border-transparent hover:scale-[1.02] focus:border-accent focus:outline-none focus:ring-0 focus:scale-[1.02]">
             <option value="" disabled selected hidden>generation</option>
-            <option value=""></option>
+            <option value="4th">4th</option>
+            <option value="5th">5th</option>
+            <option value="6th">6th</option>
+            <option value="7th">7th</option>
+            <option value="8th">8th</option>
+            <option value="9th">9th</option>
+            <option value="10th">10th</option>
+            <option value="11th">11th</option>
+            <option value="12th">12th</option>
+            <option value="13th">13th</option>
+            <option value="14th">14th</option>
+            <option value="15th">15th</option>
           </select>
         </label>
       </div>
