refactor: Create shared classes for repeated elments
This commit includes creation of utility classes for <body>, <a>, and <span>
The link to src/css/styles.css was removed.

This cleans up the increasingly cluttered HTML and makes sure there's no need to copy-paste long styles, instead just using shortened and concise utility classes.

--- a/src/index.html
+++ b/src/index.html
@@ -26,11 +26,10 @@
   <title>ShreckNet Lite - VtM Character Sheet</title>
 
   <!-- Stylesheets -->
-  <link rel="stylesheet" href="/src/css/style.css">
   <link rel="stylesheet" href="/dist/style.css">
 </head>
 
-<body class="bg-background min-h-screen flex justify-center items-center font-body text-textPrimary">
+<body class="body">
 
   <!-- Main container -->
   <div class="w-full flex flex-col items-center gap-7 sm:gap-14 lg:gap-28">
@@ -43,34 +42,34 @@
       <p class=" text-textSecondary text-lg sm:hidden">
         by
         <a href="https://github.com/overuseofrem/schrecknet-lite"
-          class="text-accent hover:underline hover:underline-offset-4">frantan</a>
+          class="link">frantan</a>
       </p>
 
       <!--  Tablets Only -->
       <p class=" text-textSecondary text-base hidden sm:block lg:hidden">
         welcome to / --------------------- \ by
         <a href="https://github.com/overuseofrem/schrecknet-lite"
-          class="text-accent hover:underline hover:underline-offset-4">frantan</a>
+          class="link">frantan</a>
       </p>
 
       <!-- Desktop Only -->
       <p class=" text-textSecondary text-xl hidden lg:block">
         welcome to / ------------------------ \ by
         <a href="https://github.com/overuseofrem/schrecknet-lite"
-          class="text-accent hover:underline hover:underline-offset-4">frantan</a>
+          class="link">frantan</a>
       </p>
 
     </div>
 
     <!-- Button container -->
-    <div class="text-base w-max flex flex-col justify-center items-center gap-5">
+    <div class="w-max flex flex-col justify-center items-center gap-5">
       <!-- Buttons -->
       <div class="flex flex-col text-center font-body text-textPrimary space-y-2 lg:text-lg">
-        <a href="v20.html" class="group bg-foreground px-5 py-2 rounded-round hover:bg-accent transition transform hover:scale-[1.02]">
-          create a <span class="text-accent group-hover:text-textPrimary transition">V20</span> character sheet
+        <a href="v20.html" class="btn group">
+          create a <span class="span">V20</span> character sheet
         </a>
-        <a href="v5.html" class="group bg-foreground px-5 py-2 rounded-round hover:bg-accent transition transform hover:scale-[1.02]">
-          create a <span class="text-accent group-hover:text-textPrimary transition">V5</span> character sheet
+        <a href="v5.html" class="btn group">
+          create a <span class="span">V5</span> character sheet
         </a>
       </div>
       <p class="text-textSecondary font-body text-xs">version 0.1.0</p>
@@ -79,7 +78,7 @@
   </div>
 
   <!-- Javascript -->
-  <script src="script.js"></script>
+  <script src="src/js/script.js"></script>
 
 </body>
 
