--- a/src/v20.html
+++ b/src/v20.html
@@ -40,7 +40,7 @@
   <link rel="stylesheet" href="/dist/style.css">
 </head>
 
-<body class="overflow-x-hidden bg-background min-h-screen flex flex-col justify-center items-center font-body text-textPrimary">
+<body class="body">
 
   <!-- Header -->
    <header class="bg-foreground absolute top-0 w-full h-14 flex justify-between items-center px-5 sm:h-16 lg:px-10">
